# VexCtx

./: .env.example  .gitignore  BUG_FIX_AGENT.md  CODE_OF_CONDUCT.md  CODE_REVIEW_AGENT.md  CONTRIBUTING.md  DECOMPOSE_AGENT.md  DESIGN.md  Dockerfile  LICENSE  PRD.md  README.md  ROADMAP.md  SECURITY.md  episodes.db-journal  install.sh  latest.json  pyproject.toml  vexctx-daemon.spec  vexctx_refinement_plan.md  website_refinement_plan.md
.github/: PULL_REQUEST_TEMPLATE.md  decompose.config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
Formula/: vexctx.rb
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
extension/: manifest-firefox.json  manifest.json
extension/background/: service_worker.js
extension/content/: bridge.js  chatgpt.js  claude.js  gemini.js  perplexity.js
extension/options/: options.html  options.js
extension/popup/: popup.css  popup.html  popup.js
portal/: .firebaserc  package-lock.json  package.json
scratch/: demo_run.py  move_files.py  search_db.py  test_pro.py  test_real_world.py
scripts/: build_daemon.py  generate_updater_keys.sh
sdk/node/: index.ts
sdk/python/: vexctx_client.py
tests/: conftest.py  test_api.py  test_encryption.py  test_export_import.py  test_ext_router.py  test_graph.py  test_ingestion.py  test_license.py  test_pricing_gates.py  test_retrieval.py  test_sync.py
vexctx/: __init__.py  config.py  main.py
vexctx/ext/: __init__.py  models.py  router.py
vexctx/graph/: builder.py  models.py  router.py  store.py
(+51 files in other folders)
