[project]
name = "vexctx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "cryptography>=44.0.0",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "qdrant-client>=1.7.3",
    "tiktoken>=0.7.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "redis>=7.4.0",
    "uvicorn>=0.47.0",
    "watchfiles>=1.2.0",
    "sqlcipher3>=0.6.2",
    "pyjwt>=2.13.0",
    "pyinstaller>=6.20.0",
]

